--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "pydantic==2.11.4",
     "python-multipart==0.0.20",
     "pandas==2.2.3",
+    "fastapi-pagination==0.13.1",
 ]
 
 [build-system]
