--- a/frontend/src/package.json
+++ b/frontend/src/package.json
@@ -24,6 +24,8 @@
     "@heroui/system": "2.4.15",
     "@heroui/tabs": "^2.2.16",
     "@heroui/theme": "2.4.15",
+    "@radix-ui/react-dialog": "^1.1.13",
+    "@radix-ui/react-popover": "^1.1.13",
     "@radix-ui/react-slot": "^1.2.2",
     "@radix-ui/react-tabs": "^1.1.11",
     "@react-aria/ssr": "3.9.8",
@@ -31,13 +33,14 @@
     "@tabler/icons": "^3.31.0",
     "@tabler/icons-react": "^3.31.0",
     "@tanstack/react-query": "^5.75.7",
+    "@tanstack/react-table": "^8.21.3",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "11.13.1",
     "intl-messageformat": "10.7.16",
     "lucide-react": "^0.510.0",
-    "next": "15.3.1",
+    "next": "^15.3.2",
     "next-themes": "0.4.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
