--- a/frontend/src/package.json
+++ b/frontend/src/package.json
@@ -24,8 +24,10 @@
     "@heroui/system": "2.4.15",
     "@heroui/tabs": "^2.2.16",
     "@heroui/theme": "2.4.15",
+    "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-dialog": "^1.1.13",
     "@radix-ui/react-dropdown-menu": "^2.1.14",
+    "@radix-ui/react-label": "^2.1.6",
     "@radix-ui/react-popover": "^1.1.13",
     "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-slot": "^1.2.2",
@@ -41,16 +43,20 @@
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "framer-motion": "11.13.1",
     "intl-messageformat": "10.7.16",
     "lucide-react": "^0.510.0",
     "next": "^15.3.2",
     "next-themes": "0.4.6",
     "react": "18.3.1",
+    "react-day-picker": "^8.10.1",
     "react-dom": "18.3.1",
+    "react-hook-form": "^7.56.3",
     "recharts": "^2.15.3",
     "tailwind-merge": "^3.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@eslint/compat": "1.2.8",
