--- a/frontend/src/package.json
+++ b/frontend/src/package.json
@@ -25,6 +25,7 @@
     "@heroui/tabs": "^2.2.16",
     "@heroui/theme": "2.4.15",
     "@hookform/resolvers": "^5.0.1",
+    "@radix-ui/react-checkbox": "^1.3.1",
     "@radix-ui/react-dialog": "^1.1.13",
     "@radix-ui/react-dropdown-menu": "^2.1.14",
     "@radix-ui/react-label": "^2.1.6",
