--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "rich==14.0.0",
     "uvicorn==0.34.2",
     "pydantic==2.11.4",
+    "pydantic-settings==2.2.1",
     "python-multipart==0.0.20",
     "pandas==2.2.3",
     "fastapi-pagination==0.13.1",
