--- a/frontend/src/package.json
+++ b/frontend/src/package.json
@@ -48,16 +48,19 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "embla-carousel-react": "^8.6.0",
     "framer-motion": "11.13.1",
     "intl-messageformat": "10.7.16",
     "lucide-react": "^0.510.0",
     "next": "^15.3.2",
-    "next-themes": "0.4.6",
+    "next-themes": "^0.4.6",
     "react": "18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.56.3",
+    "react-plaid-link": "^4.0.1",
     "recharts": "^2.15.3",
+    "sonner": "^2.0.4",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.4"
