--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -17,6 +17,9 @@ dependencies = [
     "python-multipart==0.0.20",
     "pandas==2.2.3",
     "fastapi-pagination==0.13.1",
+    "plaid-python==32.0.0",
+    "python-jose[cryptography]==3.3.0",
+    "passlib[bcrypt]==1.7.4",
 ]
 
 [build-system]
